Minor scss fix.
This will fix overlapping controlls on mobile devices.

--- a/app/stylesheet/_base.scss
+++ b/app/stylesheet/_base.scss
@@ -30,6 +30,9 @@ $global-radius: 3px;
 // Breaks
 $break-timetable: 50em;
 
+// Custom fonts sizes
+$samsung: 360px;
+
 // Custom mixins
 
 @mixin bp($point) {
